[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "json", "chrono", "uuid"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
secrecy = "0.8"
ring = "0.17"
base64 = "0.21"